Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44465

QLinuxFbScreen::grabWindow() not implemented

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.5.0
    • 5.4.0
    • QPA: LinuxFB
    • None
    • 3acd8d9aa463ffcc7d63d5262c0a66577c38f556

      There is no QLinuxFbScreen implementation of QPlatformScreen::grabWindow(). Since the default implementation returns an empty QPixmap screenshot-taking is not possible.

      Same issue as in QTBUG-34976 and QTBUG-34846 for Android and Wayland.

        For Gerrit Dashboard: QTBUG-44465
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            porten Harri Porten (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes