Support grabWindow() in linuxfb

Task-number: QTBUG-44465
Change-Id: Id74a6cc109113e6054ab31f0e765b4e7e220b657
Reviewed-by: Louai Al-Khanji <louai.al-khanji@theqtcompany.com>
Reviewed-by: Jørgen Lind <jorgen.lind@theqtcompany.com>